# docs/swagger.json
@@ -17,6 +17,29 @@
     },
     "host": "202.158.14.235:4222",
     "paths": {
+        "/api/v1/map": {
+            "get": {
+                "description": "Get Map Html",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "TM1"
+                ],
+                "summary": "Get Map Html",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/send": {
             "post": {
                 "description": "Send Tm1 Data",
